--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@
         <div class="container h-100 d-flex align-items-center">
             <div class="row">
                 <div class="col-lg-6 col-md-12">
-                    <h1 data-aos="fade-up" data-aos-duration="800">We provide product management coaching and consulting
+                    <h1 class="leftimg" data-aos="fade-up" data-aos-duration="800">We provide product management coaching and consulting
                         services that help organisations create products that customers love and creates value for the
                         business.</h1>
                         <a href="contact-us.html" class="btn btn-white">Get in Touch</a>
