--- a/index.html
+++ b/index.html
@@ -77,10 +77,13 @@
         <div class="container h-100 d-flex align-items-center">
             <div class="row">
                 <div class="col-lg-6 col-md-12">
-                    <h1 class="leftimg" data-aos="fade-up" data-aos-duration="800">We provide product management coaching and consulting
+                    <h1 style=""  data-aos="fade-up" data-aos-duration="800"    class="leftimg">We provide product management
+                        coaching and consulting
                         services that help organisations create products that customers love and creates value for the
                         business.</h1>
-                        <a href="contact-us.html" class="btn btn-white">Get in Touch</a>
+
+                      
+                    <a href="contact-us.html" class="btn btn-white">Get in Touch</a>
                 </div>
             </div>
         </div>
@@ -119,8 +122,8 @@
                 </div>
                 <div class="col-lg-6 col-md-12">
                     <div class="text-end">
-                        <img class="smallimag" data-aos="fade-up" data-aos-duration="800" src="images/product-consulting.svg"
-                            alt="product-consulting">
+                        <img class="smallimag" data-aos="fade-up" data-aos-duration="800"
+                            src="images/product-consulting.svg" alt="product-consulting">
                     </div>
                 </div>
             </div>
@@ -133,7 +136,8 @@
                 <div class="col-lg-6 col-md-12">
                     <div class="offer-list" data-aos="fade-up" data-aos-duration="800">
                         <h6>Product Discovery</h6>
-                        <p>We work with product teams and help them <br> discover the right product by adopting<br> modern
+                        <p>We work with product teams and help them <br> discover the right product by adopting<br>
+                            modern
                             product discovery practices.</p>
                         <a href="product-discovery.html" class="btn btn-primary">Learn more</a>
                     </div>
@@ -145,7 +149,8 @@
                 <div class="col-lg-6 col-md-12">
                     <div class="offer-list" data-aos="fade-up" data-aos-duration="800">
                         <h6>Product Analytics</h6>
-                        <p>Analytics tracks how users behave and use<br> your product. We help define your metrics, and<br> also
+                        <p>Analytics tracks how users behave and use<br> your product. We help define your metrics,
+                            and<br> also
                             plan and implement product analytics.</p>
                         <a href="product-analytics.html" class="btn btn-primary">Learn more</a>
                     </div>
@@ -153,8 +158,8 @@
                 </div>
                 <div class="col-lg-6 col-md-12">
                     <div class="text-end">
-                        <img class="smallimag" data-aos="fade-up" data-aos-duration="800" src="images/product-analysis.svg"
-                            alt="/product-analysis">
+                        <img class="smallimag" data-aos="fade-up" data-aos-duration="800"
+                            src="images/product-analysis.svg" alt="/product-analysis">
 
                     </div>
                 </div>
